# discord-role-manager

./: .gitignore  Cargo.toml  README.md
db/: roles.ron  roles.toml
src/: commands.rs  main.rs  serializer.rs  structs.rs
src/commands/: group.rs  help.rs  role.rs
